--- a/ingress-controller.yaml
+++ b/ingress-controller.yaml
@@ -1,3 +1,25 @@
+
+#namespace/ingress-nginx created
+#serviceaccount/ingress-nginx created
+#configmap/ingress-nginx-controller created
+#clusterrole.rbac.authorization.k8s.io/ingress-nginx created
+#clusterrolebinding.rbac.authorization.k8s.io/ingress-nginx created
+#role.rbac.authorization.k8s.io/ingress-nginx created
+#rolebinding.rbac.authorization.k8s.io/ingress-nginx created
+#service/ingress-nginx-controller-admission created
+#service/ingress-nginx-controller created
+#deployment.apps/ingress-nginx-controller created
+#ingressclass.networking.k8s.io/nginx created
+#validatingwebhookconfiguration.admissionregistration.k8s.io/ingress-nginx-admission created
+#serviceaccount/ingress-nginx-admission created
+#clusterrole.rbac.authorization.k8s.io/ingress-nginx-admission created
+#clusterrolebinding.rbac.authorization.k8s.io/ingress-nginx-admission created
+#role.rbac.authorization.k8s.io/ingress-nginx-admission created
+#rolebinding.rbac.authorization.k8s.io/ingress-nginx-admission created
+#job.batch/ingress-nginx-admission-create created
+#job.batch/ingress-nginx-admission-patch created
+
+
 apiVersion: v1
 kind: Namespace
 metadata:
